--- a/Contenedor/polls_app/templates/preguntas.html
+++ b/Contenedor/polls_app/templates/preguntas.html
@@ -1,18 +1,26 @@
+{% extends 'base.html' %}
+{% block content %}
+    
+
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'preguntas.css' %}">
     <title>Questions</title>
 </head>
 <body>
+    <h1>Preguntas recientes</h1>
     {% for pregunta in preguntas  %}
-    <div>
+    <div class="pregunta_container">
         <ul>
-            <h2><li>{{pregunta}}</li></h2>
+            <h2><li><a href="{% url 'detalles_por_pregunta' pregunta.id %}">{{pregunta}}</a><div class="fecha"><br>{{pregunta.fecha_publicacion}}</div> </li></h2>
         </ul>
     </div>
         
     {% endfor %}
 </body>
 </html>
+{% endblock content %}
