Estoy terminando de pulir la polls_app

--- a/Contenedor/polls_app/templates/base.html
+++ b/Contenedor/polls_app/templates/base.html
@@ -1,8 +1,9 @@
 <div class="nav_container">
     <nav class="barra_navegacion">
-        <li><a href="preguntas">Preguntas</a></li>
-        <li><a href="home"></a>Menú</li>
-        <li><a href=""></a></li>
+        
+        <li><a href="{% url 'preguntas' %}">Preguntas</a></li>
+        <li><a href="{% url 'inicio' %}">Menú</a></li>
+        
 
     </nav>
 </div>
