--- a/Contenedor/polls_app/templates/index.html
+++ b/Contenedor/polls_app/templates/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
     <h1>Hola</h1>
+    <h2>Si desea hacer alguna pregunta, haga click debajo</h2>
+    <a href="{%url "formulario"%}"><h3>Crear pregunta</h3></a>
 {% endblock content %}
 
