--- a/Contenedor/polls_app/static/preguntas.css
+++ b/Contenedor/polls_app/static/preguntas.css
@@ -5,3 +5,21 @@ body{
 .fecha{
     font-size: 11px;
 }
+
+.pregunta_container{
+    width: 100%;
+    background-color: #6f6;
+    margin-top: 10px;
+    padding: 15px;
+    border-radius: 10px;
+    color: #fff;
+}
+
+.botoncitos{
+    padding: 6px;
+    background-color: #ddd;
+    text-decoration: none;
+    border-radius: 7px;
+    margin-left: 7px;
+    color: #04f;
+}
