--- a/Contenedor/polls_app/templates/detalles.html
+++ b/Contenedor/polls_app/templates/detalles.html
@@ -1,4 +1,9 @@
+{% extends 'base.html' %}
+
+{% block content %}
 {% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,6 +16,7 @@
     <h2>{{todas_las_preguntas.pregunta}}</h2>
     {% for respuesta in respuestas  %}
     <div class="respuestas_container">
+        
         <ul>
         <li class="respuestas">{{respuesta.respuesta}} <br><p class="fecha">{{respuesta.fecha}}</p></li>
     </ul>
@@ -22,3 +28,4 @@
     
 </body>
 </html>
+{% endblock content %}
